# rofi-ssh-aws

./: README.md  pyproject.toml  rofi-ssh-aws.py
src/rofi_ssh_aws/: __init__.py  aws.py  cli.py  rofi.py  ssh.py
