[build-system]
build-backend = "poetry.core.masonry.api"
requires      = ["poetry-core"]

[tool.mypy]
files                  = "src/**/*.py"
ignore_errors          = true
ignore_missing_imports = true
pretty                 = true
python_version         = "3.10"
show_column_numbers    = true
show_error_codes       = true
show_error_context     = true

[[tool.mypy.overrides]]
ignore_errors = false
module        = "rofi-ssh-aws"

[tool.poetry]
authors     = ["Harrison Totty <harrisongtotty@gmail.com>"]
description = "A script for ssh'ing into AWS EC2 instances via rofi."
name        = "rofi-ssh-aws"
readme      = "README.md"
repository  = "https://github.com/HarrisonTotty/rofi-ssh-aws"
version     = "2.1.1"

[tool.poetry.dependencies]
boto3  = "^1.26"
python = "^3.10"

[tool.poetry.dev-dependencies]
mypy            = "*"
pytest          = "*"
pytest-aio      = "*"
pytest-cov      = "*"
pytest-randomly = "*"

[tool.poetry.scripts]
rofi-ssh-aws = "rofi_ssh_aws:main"

[tool.pytest.ini_options]
addopts          = "-v --cov=rofi-ssh-aws"
python_files     = "*.py"
python_functions = "test_*"
testpaths        = "tests"
